WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205920
Fix for parameterized attribute TextMarkerRangeForUIElement which should run ion main thread.
https://bugs.webkit.org/show_bug.cgi?id=205920
Summary
Fix for parameterized attribute TextMarkerRangeForUIElement which should run ...
Andres Gonzalez
Reported
2020-01-08 05:40:43 PST
Fix for parameterized attribute TextMarkerRangeForUIElement which should run ion main thread.
Attachments
Patch
(2.22 KB, patch)
2020-01-08 05:46 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-01-08 05:46:29 PST
Created
attachment 387099
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-08 11:15:12 PST
Comment on
attachment 387099
[details]
Patch Clearing flags on attachment: 387099 Committed
r254207
: <
https://trac.webkit.org/changeset/254207
>
WebKit Commit Bot
Comment 3
2020-01-08 11:15:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-01-08 11:16:16 PST
<
rdar://problem/58414905
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug