Fix for parameterized attribute TextMarkerRangeForUIElement which should run ion main thread. https://bugs.webkit.org/show_bug.cgi?id=205920

Reviewed by Chris Fleizach.

Parameterized attribute TextMarkerRangeForUIElement must run on main
thread since it invokes DOM Range methods.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):


Canonical link: https://commits.webkit.org/219066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254207 268f45cc-cd09-0410-ab3c-d52691b4dbfc