Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm
@@ -4009,12 +4009,14 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
             return [axObject->wrapper() attachmentView];
         return axObject->wrapper();
     }
-    
+
     if ([attribute isEqualToString:@"AXTextMarkerRangeForUIElement"]) {
-        RefPtr<Range> range = uiElement.get()->elementRange();
-        return [self textMarkerRangeFromRange:range];
+        return Accessibility::retrieveValueFromMainThread<id>([&uiElement, protectedSelf = RetainPtr<WebAccessibilityObjectWrapper>(self)] () -> id {
+            RefPtr<Range> range = uiElement.get()->elementRange();
+            return [protectedSelf textMarkerRangeFromRange:range];
+        });
     }
-    
+
     if ([attribute isEqualToString:@"AXLineForTextMarker"]) {
         VisiblePosition visiblePos = [self visiblePositionForTextMarker:(textMarker)];
         return [NSNumber numberWithUnsignedInt:m_object->lineForPosition(visiblePos)];
